manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-svc
spec:
  type: LoadBalancer
  selector:
    app: todo-ui
  ports:
  - port: 80
    targetPort: 80
